add: user register & activation
