# cmd/api/users.go
@@ -3,6 +3,7 @@ package main
 import (
 	"context"
 	"errors"
+	"github.com/go-chi/chi/v5"
 	"github.com/minhnghia2k3/GOssage/internal/store"
 	"net/http"
 )
@@ -30,18 +31,18 @@ func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-//	@Summary		Follow user
-//	@Description	authenticated user follow provided user
-//	@Tags			users
-//	@Accept			json
-//	@Produce		json
-//	@Param			userID	path	int	true	"User ID"
-//	@Success		204
-//	@Failure		400	{object}	error
-//	@Failure		409	{object}	error
-//	@Failure		404	{object}	error
-//	@Failure		500	{object}	error
-//	@Router			/users/{userID}/follows [put]
+// @Summary		Follow user
+// @Description	authenticated user follow provided user
+// @Tags			users
+// @Accept			json
+// @Produce		json
+// @Param			userID	path	int	true	"User ID"
+// @Success		204
+// @Failure		400	{object}	error
+// @Failure		409	{object}	error
+// @Failure		404	{object}	error
+// @Failure		500	{object}	error
+// @Router			/users/{userID}/follows [put]
 func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request) {
 	followerUser := getUserFromContext(r)
 
@@ -67,17 +68,17 @@ func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request
 	w.WriteHeader(http.StatusNoContent)
 }
 
-//	@Summary		Unfollow user
-//	@Description	authenticated user unfollow provided user
-//	@Tags			users
-//	@Accept			json
-//	@Produce		json
-//	@Param			userID	path	int	true	"User ID"
-//	@Success		204
-//	@Failure		400	{object}	error
-//	@Failure		404	{object}	error
-//	@Failure		500	{object}	error
-//	@Router			/users/{userID}/unfollows [put]
+// @Summary		Unfollow user
+// @Description	authenticated user unfollow provided user
+// @Tags			users
+// @Accept			json
+// @Produce		json
+// @Param			userID	path	int	true	"User ID"
+// @Success		204
+// @Failure		400	{object}	error
+// @Failure		404	{object}	error
+// @Failure		500	{object}	error
+// @Router			/users/{userID}/unfollows [put]
 func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Request) {
 	followerUser := getUserFromContext(r)
 
@@ -89,6 +90,32 @@ func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Reque
 
 	err = app.storage.Followers.Unfollow(r.Context(), followerUser.ID, unfollowedID)
 	if err != nil {
+		switch {
+		case errors.Is(err, store.ErrNotFound):
+			app.notFoundResponse(w, r, err)
+		default:
+			app.internalServerError(w, r, err)
+		}
+		return
+	}
+
+	w.WriteHeader(http.StatusNoContent)
+}
+
+// @Summary		Active user
+// @Description	active user by using given token
+// @Tags			users
+// @Accept			json
+// @Produce		json
+// @Param			token	path	string	true	"Activation token"
+// @Success		204
+// @Failure		400	{object}	error
+// @Failure		404	{object}	error
+// @Failure		500	{object}	error
+// @Router			/users/activate/{token} [put]
+func (app *application) activeUserHandler(w http.ResponseWriter, r *http.Request) {
+	token := chi.URLParam(r, "token")
+	if err := app.storage.Users.Activate(r.Context(), token); err != nil {
 		switch {
 		case errors.Is(err, store.ErrNotFound):
 			app.notFoundResponse(w, r, err)
